home-media-viewer/src/styles/hmv.module.scss
/* ... */
.browseContentCard.disabled {
    .thumbnail {
        opacity: 0.7;
    }
}

.albumDetails {
    font-size: large;

    .title {
        font-size: larger;
        margin-bottom: 10px;
    }

    .caption {
        display: inline-block;
        color: black;
        width: 100px;
    }

    .value {
        font-weight: bold;
    }

    .new {
        color: yellow;
    }

    .processed {
        color: green;
    }

    .failed {
        color: red;
    }
}

.popup {
    position: fixed;
    z-index: 100;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.4);

    > div:nth-child(2) {
        display: block;
        margin: 10% auto;
    }
}

.metadataDisplay {
    width: 55vw;
    min-width: 350px;
    max-height: 80vh;
    border: $appBorderColor solid 2px;
    background-color: $appBackgroundAlternative;
    padding: 15px;
    overflow: scroll;
    scrollbar-color: $appBorderColor;
    scrollbar-base-color: $appBackgroundAlternative;
    scrollbar-width: thin;

    > div {
        margin-top: 10px;
    }

    .title {
        text-align: center;
        font-weight: bold;
        font-size: 23px;

        abbr {
            text-decoration: none;
        }
    }

    .thumbnailContainer {
        height: 200px;
        width: 100%;
    }

    .highlightedMetadataContainer {
        display: flex;
        flex-flow: row wrap;
        gap: 10px
    }

    .locationContainer {
        max-height: 300px;
        width: 100%;

        > div {
            width: 100%;
            height: 100%;
        }
    }

    li {
        list-style-type: none;
    }
}

.locationMetadataDisplay {
    display: flex;
    flex-flow: column nowrap;
    min-height: 35px;

    > div {
        width: 100%;
    }

    .mapContainer {
        flex-grow: 1;
    }

    .actionsContainer {
        height: 35px;
        flex-grow: 0;
    }

    .zoomContainer {
        display: flex;
        flex-flow: row nowrap;
        gap: 10px;

        > * {
            display: inline-block;
        }

        > button {
            flex-grow: 1;
            font-size: 25px;
            font-weight: bold;
            margin: 0px;
        }

        > span {
            font-weight: bold;
            vertical-align: middle;
        }
    }
}

.locationMetadataDisplay.isOpen {
    height: 300px !important;
}

.thumbnailContainer {
    .imageWrapper {
        width: 100%;
        height: 100%;

        > img {
            width: 100%;
            height: 100%;
            object-fit: contain;
        }
    }
}

.operationsBlock {
    position: absolute;
    top: 0px;
    right: 0px;
    display: flex;
    flex-flow: row nowrap;
    gap: 10px;

    > * {
        width: 60px;
        height: 60px;
        z-index: 100;
        text-align: center;
        font-size: 48px;
        font-weight: bold;
        color: white;
        background-color: rgba(0, 0, 0, 0.3);
        border: 1px white solid;
        border-radius: 30px;
        padding: 3px;
        cursor: pointer;
    }
}

.highlightedMetaIcon {
    width: 35px;
    height: 35px !important;
    margin-top: -3px;
    margin-left: 5px;
    cursor: pointer;
    font-size: 28px;
    border-radius: 20px !important;
    text-align: center;
}

.locationIcon {
    width: 40px;
    height: 40px !important;
    margin-top: -5px;
    margin-left: 5px;
    background-color: transparent !important;
    cursor: pointer;

    img {
        display: block;
        width: 100%;
        height: 100%;
    }
}

.generalListContainer {
    margin: 3rem auto;
    max-width: 90%;

    .listTitle {
        width: 100%;
        text-align: center;
        font-size: x-large;
        font-weight: bold;
        color: $appTextColorAlternative;
    }
}

.videoIcon {
    position: absolute;
    top: 50% !important;
    left: 50% !important;
    width: 70px !important;
    height: 70px !important;
    margin-left: -35px;
    margin-top: -35px;
}

select.roundedElement {
    border-color: $appBorderColor;
    color: $appTextColorAlternative;
    background-color: $appBackgroundAlternative;
    border-radius: 15px;
    padding: 10px;
}

.roundBorderedElement {
    padding: 5px;
    border-radius: 15px;
    border: 1px solid $appBorderColor;
    background-color: $appBackgroundAlternative;
    color: $appTextColorAlternative;
    margin-right: 10px;
}

.roundBorderedButtonElement {
    padding: 5px;
    border-radius: 15px;
    border: 1px solid $appBorderColor;
    background-color: $appBackgroundAlternative;
    color: $appTextColorAlternative;
    margin-right: 10px;
}

.roundBorderedButtonElement:hover {
    background-color: $appTextColorAlternative;
    color: $appBackgroundAlternative;
}

.roundBorderedButtonElement:disabled {
    opacity: 0.7;
}

.buttonElement {
    padding: 4px;
    margin-right: 5px;
    border-radius: 3px;
    border: 1px solid $appBorderColor;
    background-color: $appBackgroundAlternative;
    color: $appTextColorAlternative;
    cursor: pointer;
}

.buttonElement:hover {
    background-color: $appTextColorAlternative;
    color: $appBackgroundAlternative;
}

.buttonElement.primaryButton {
    background-color: $appTextColorAlternative;
    color: $appBackgroundAlternative;
}

.buttonElement.primaryButton:hover {
    background-color: $appBackgroundAlternative;
    color: $appTextColorAlternative;
}

.fullWidthContainer {
    width: 100%;
    padding: 10px;
    text-align: center;
}

.scrollToTop {
    position: fixed;
    width: 40px;
    height: 40px;
    border: $appBorderColor solid 2px;
    border-radius: 20px;
    background-color: $appBackgroundColor;
    color: $appTextColor;
    font-size: 30px;
    font-weight: bold;
    text-align: center;
    bottom: 10vmin;
    right: 10vmin;
    z-index: 20;
    cursor: pointer;
}
/* ... */

